deploy/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubers
  labels:
    app.kubernetes.io/name: kubers
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubers
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubers
    spec:
      serviceAccountName: "kubers"
      containers:
        - name: kubers
          image: jacops/kubersctl:v0.2.0
          imagePullPolicy: IfNotPresent
          args:
            - injector
            - admission-server
            - 2>&1
