deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
  namespace: default
  labels:
    app.kubernetes.io/name: kubers
spec:
  ports:
    - port: 443
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kubers
