deploy/kubers.yaml
---
# Source: kubers/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
  namespace: kubers
  labels:
    app.kubernetes.io/name: kubers
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kubers
    helm.sh/chart: kubers-1.1.0
spec:
  ports:
    - port: 443
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kubers
---
# Source: kubers/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubers
  namespace: kubers
  labels:
    app.kubernetes.io/name: kubers
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kubers
    helm.sh/chart: kubers-1.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubers
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubers
    spec:
      serviceAccountName: kubers
      containers:
        - name: kubers
          image: "docker.io/jacops/kubersd:latest"
          imagePullPolicy: IfNotPresent
          args:
            - webhook
            - 2>&1
---
# Source: kubers/templates/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: kubers-cfg
  namespace: kubers
  labels:
    app.kubernetes.io/name: kubers
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kubers
    helm.sh/chart: kubers-1.1.0
webhooks:
  - name: kubers.jacops.pl
    clientConfig:
      service:
        name: webhook
        path: "/mutate"
        namespace: kubers
      caBundle: ""
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["deployments", "jobs", "pods", "statefulsets"]
