deploy/mutating-webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: kubers-cfg
  labels:
    app.kubernetes.io/name: kubers
webhooks:
  - name: kubers.jacops.pl
    clientConfig:
      service:
        name: webhook
        path: "/mutate"
        namespace: "kubers"
      caBundle: ""
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
